# tcidverify

./: .cursorrules  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TC_ID_SPEC.md  settings.gradle.kts
.agent/: agents.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
idverify-sdk/: AGENTS.md  ARCHITECTURE.md  README.md  TC_ID_SPEC.md  idverify.code-workspace
idverify-sdk/android/: build.gradle.kts  proguard-rules.pro
idverify-sdk/android-test-app/: README.md  build.gradle.kts
idverify-sdk/android-test-app/src/main/: AndroidManifest.xml
idverify-sdk/android-test-app/src/main/java/com/idverify/test/: GuideFrameOverlay.kt  MainActivity.kt
idverify-sdk/android-test-app/src/main/res/drawable/: id_card_guide_frame.xml
idverify-sdk/android-test-app/src/main/res/layout/: activity_main.xml
idverify-sdk/android/src/main/: AndroidManifest.xml
idverify-sdk/android/src/main/cpp/: CMakeLists.txt  ROIMapper.h  VisionProcessor.cpp  VisionProcessor.h  native-lib.cpp
idverify-sdk/android/src/main/java/com/idverify/sdk/api/: IDScanner.kt  (+2 more)
idverify-sdk/react-native/: .npmignore  README.md  USAGE.md  package.json  react-native.config.js  tsconfig.json
idverify-sdk/react-native/android/: build.gradle  build.gradle.kts  proguard-rules.pro
idverify-sdk/react-native/android/src/main/: AndroidManifest.xml
idverify-sdk/react-native/src/: CameraView.tsx  IdVerify.ts  index.ts  index.tsx  types.ts
idverify-sdk/react-native/src/components/: IDScannerView.tsx
idverify-sdk/react-native/src/hooks/: useIDScanner.ts
(+42 files in other folders)
